02/26/2003 Bob Rossi <bob_rossi@cox.net>

    * Added extra parameter to tgdb_start: A new fd is returned from 
    tgdb_start, it signals the user when data the user is typing is 
    ready to be returned.
    * Added function tgdb_send_input: The gui should send to this function
    every char the user has typed ( from readline ).
    * Added function tgdb_recv_input: The gui calls this function when the
    new descriptor is active ( from select ) and gets back data to write 
    to the terminal.
    * Updated gdbmi branch to compile with new interface
    * Implemented new interface in annotate-two-src
    * Getting driver to compile with new interface and moving to lib

02/24/2003 Bob Rossi <bob_rossi@cox.net>

    * Fixing buffer support for line at a time input: Trying to get support
    for buffered commands to work with line at a time interface.
    * Removed legacy globals functions: Removed functions that were looking
    at what char's have been typed and making decisions from that.
    * Modified buffer package to take commands instead of char's: The buffer
    package now takes only full commands at a time.
    * Fixing gdbmi interface to work with new libtgdb interface.
    * Fixing tgdb_util to use ~/.tgdb/gdb_init as the startup file
    * Moved config file info into lib/ instead of annotate-two-src: I figured
    both annotate and gdbmi would need to know this information.

02/23/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed the Makefile's back to not using libtool: The new version of 
    automake support making static libraries from files in multiple dirs.
    * Major re-write, tgdb takes a command at a time now: libtgdb 
    now takes a command at a time. Instead of a char.
    * Removing states from data that checked for char's the user typed:
    This is because libtgdb now only accepts full commands.

02/19/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed commands.c to dynamically allocate memory from 'info sources':